--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="text-center" id="navbarSupportedContent">
         <ul class="navbar-nav d-block">
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#about">about</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">Skills</a>
